# ftp-validator

./: .gitignore  README.md  function_app.py  generate_report.py  generate_visuals.py  local.settings.example.json  main.py  pyproject.toml  requirements.txt
ftp_validator/: blob_client.py  ftp_client.py  settings.py  table_logger.py  validator.py
tests/: conftest.py  test_validator.py
